test_regress/t/t_constraint_extern_bad.out
%Error: t/t_constraint_extern_bad.v:8:22: Definition not found for extern 'missing_bad'
    8 |    extern constraint missing_bad;
      |                      ^~~~~~~~~~~
%Error: t/t_constraint_extern_bad.v:11:20: extern not found that declares 'missing_extern'
   11 | constraint Packet::missing_extern { }
      |                    ^~~~~~~~~~~~~~
%Error: Exiting due to
